# netsight

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  alembic.ini  audit.json  commit-msg.sh  docker-compose.yaml  docker-compose.yml  i18n.sh  init.sh  netsight-supervisord.conf  pre-push.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test.sh
alembic/: env.py  script.py.mako
alembic/versions/: 2024_01_20_1433-a72f51adf94a_init_db.py  2024_02_02_1820-6d6e764d14da_init_db.py  2024_02_07_1513-703d542843d6_init_db.py
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  _typos.toml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2024_02_07_1513-703d542843d6_init_db.py  2024_07_04_2338-c09c3268e2b9_init_db.py  2024_07_09_2121-aedfbb298f93_init_db.py
backend/app/: _types.py  config.py  deps.py  exceptions.py  loggers.py  main.py  routers.py  security.py
backend/app/arch/: api.py  models.py  schemas.py
backend/app/auth/: api.py  models.py  schemas.py  services.py
backend/app/circuit/: api.py  models.py  schemas.py  services.py
backend/app/db/: __init__.py  database.py  db_types.py  dtobase.py  mixins.py
backend/app/dcim/: api.py  models.py  schemas.py  services.py
backend/app/internal/: api.py  schemas.py
backend/app/ipam/: api.py  models.py  schemas.py
backend/app/netconfig/: models.py
backend/app/org/: api.py  models.py  schemas.py  services.py
backend/app/utils/: cache.py  context.py  i18n.py  middlewares.py  openapi.py  singleton.py  validators.py
backend/deploy/: init_db_ext.py  init_metadata.py
backend/deploy/collections/metadata/: circuit_type.json  device_role.json  ip_role.json  manufacturer.json  rack_role.json
backend/src/: __main__.py  app.py
backend/src/core/: _types.py  celery_app.py  config.py
backend/src/core/database/: __init__.py  base.py  engine.py  session.py
backend/src/core/database/mixins/: __init__.py  audit_log.py  audit_time.py  audit_user.py
backend/src/core/database/types/: __init__.py  annotated.py  datetime.py  encrypted_string.py  enum.py  ipaddress.py
backend/src/core/errors/: err_codes.py  exception_handlers.py  exceptions.py
backend/src/core/models/: base.py
backend/src/core/models/mixins/: __init__.py  audit_log.py  audit_time.py  audit_user.py
backend/src/core/repositories/: __init__.py  repository.py
backend/src/core/utils/: cbv.py  context.py  i18n.py  loggers.py  processors.py  translations.py  validators.py
backend/src/features/: _types.py  consts.py  deps.py
backend/src/features/admin/: api.py  models.py  schemas.py  security.py  services.py  views.py
backend/src/features/alert/: models.py
backend/src/features/arch/: api.py  models.py  schemas.py
backend/src/features/circuit/: api.py  models.py  schemas.py  services.py  views.py
backend/src/features/dcim/: api.py  models.py  schemas.py  services.py  views.py
backend/src/features/intend/: api.py  models.py  schemas.py  services.py  views.py
backend/src/features/internal/: api.py  schemas.py
backend/src/features/ipam/: api.py  models.py  schemas.py  services.py  views.py
backend/src/features/monitor/: consts.py  models.py
backend/src/features/netconfig/: models.py  views.py
backend/src/features/org/: api.py  models.py  schemas.py  services.py  views.py
backend/src/internal/: api.py  schemas.py
backend/src/libs/countries/: __init__.py  countries.py  timezone.json  zh_CN.json
backend/src/libs/netty/: consts.py  factory.py
backend/src/libs/netty/utils/: async_ping.py
backend/src/libs/redis/: cache.py  session.py
backend/src/register/: middlewares.py  routers.py
backend/tests/: conftest.py  factoreis.py  test_main.py  test_org.py
backend/tests/libs/: test_country_sdk.py
deploy/: init_metadata.py
deploy/init/: init_db_ext.py  init_metadata.py
docs/dev/: i18n.md
frontend/: .eslintrc.js  .prettierrc.js  package.json  run.sh  tsconfig.json
migrations/: env.py
migrations/versions/: 2022_11_22_2140-7024b8aca1c2_init_db.py  2022_11_23_0924-6bb76b72a3fd_init_db.py  2022_11_23_2231-dc0fdbe2dbaa_init_db.py  2022_11_24_2010-9d7c39093141_init_db.py  2022_11_26_0008-03a24018f5b2_init_db.py  2022_11_26_2306-5b586e91c1e0_init_db.py  2022_11_28_2305-62671b38197d_init_db.py  2022_12_02_2218-06d01e0807b3_init_db.py  2022_12_03_2314-3b4a62f7b840_init_db.py  2022_12_04_1921-d6c660f08133_init_db.py  2022_12_05_2110-7e3e56810d1e_init_db.py  2022_12_08_2200-234b8d9dee5b_init_db.py  2022_12_12_2201-325e3571aac1_init_db.py  2022_12_16_1932-2ae1db620706_init_db.py  2022_12_16_2302-53901696b370_init_db.py  2022_12_20_2253-13fd339a3ee1_init_db.py  2022_12_22_1746-2ba995c62f75_init_db.py  2022_12_25_1401-9568ec3fdfcf_init_db.py
netsight/: __main__.py  app.py
netsight/core/: celery_app.py
netsight/features/: _types.py  deps.py  schemas.py
netsight/register/: middlewares.py  openapi.py  routers.py
nginx/: nginx.conf
scripts/: build.sh  test.sh  test_backend.sh
src/: _types.py  app.py  config.py  consts.py  context.py  deps.py  enums.py  errors.py  exception_handlers.py  exceptions.py  i18n.py  init_app.py  loggers.py  main.py  main_test.py  messages.pot  middlewares.py  routers.py  security.py  webserver.py
src/api/: base.py  deps.py
src/app/: base.py  deps.py
src/arch/: api.py  models.py  schemas.py
src/auth/: api.py  models.py  schemas.py  services.py
src/circuit/: api.py  models.py  schemas.py  services.py
src/core/: celery_app.py  config.py  security.py
src/db/: __init__.py  _types.py  base.py  constriants.py  crud_base.py  db_base.py  db_mixin.py  db_session.py  db_types.py  dtobase.py  mixins.py  models.py  redis_cache.py  redis_keygen.py  redis_ression.py  redis_session.py  session.py  sql_parser.py
src/dcim/: api.py  models.py  schemas.py  services.py
src/internal/: api.py  schemas.py
src/ipam/: api.py  models.py  schemas.py
src/netconfig/: models.py
src/org/: api.py  models.py  schemas.py  (+1 more)
tests/: conftest.py  context.py  factoreis.py  loggers.py  main.py  setup.py  test_main.py  test_org.py
(+140 files in other folders)
