[tool.poetry]
name = "netsight"
version = "0.1.0"
description = ""
authors = ["wangxin.jeffry <wangxin.jeffry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
sqlalchemy = "^2.0.3"
asyncpg = "^0.27.0"
asgi-correlation-id = "^3.2.1"
loguru = "^0.6.0"
aiofiles = "^23.1.0"
pyjwt = "^2.6.0"
toml = "^0.10.2"
passlib = "^1.7.4"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
email-validator = "^1.3.1"
python-dotenv = "^0.21.1"
bcrypt = "^4.0.1"
alembic = "^1.9.3"
httpx = "^0.23.3"
netaddr = "^0.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.0.1"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = false
force_grid_wrap = 0
line_length = 120
profile = "black"

[tool.black]
line_length = 120